[gd_scene load_steps=2 format=3 uid="uid://w5i7wl2xlos"]

[ext_resource type="Script" uid="uid://bnggxw78h248d" path="res://addons/maaacks_game_template/examples/scenes/menus/options_menu/game/reset_game_control/reset_game_control.gd" id="1_wkygd"]

[node name="ResetGameControl" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 32)
offset_top = 210.0
offset_right = 305.0
offset_bottom = 242.0
script = ExtResource("1_wkygd")

[node name="ResetLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Reset Game :"

[node name="ResetButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(72, 32)
layout_mode = 2
text = "Reset"

[node name="CancelButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(72, 32)
layout_mode = 2
text = "No"

[node name="ConfirmButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(72, 32)
layout_mode = 2
text = "Yes"

[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="ConfirmButton" to="." method="_on_confirm_button_pressed"]
